<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="info.no_ip.taka16.deliverybook.book.BookFormActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_form_areaname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_area_name"
            android:layout_alignBottom="@+id/edit_area_name"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/edit_area_name"
            android:layout_toStartOf="@+id/edit_area_name"
            android:gravity="left"
            android:text="@string/area_name_form"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_area_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/area_name_hint"
            android:inputType="none"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="35dp" />
    </LinearLayout>

    <Button
        android:id="@+id/area_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="13dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="88dp" />

</RelativeLayout>
