<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.no_ip.taka16.deliverybook.book.BookActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="503dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_areaname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/asa_orange"
                android:gravity="center_vertical|center"
                android:text="Area Name"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_detail"
            android:layout_width="match_parent"
            android:layout_height="251dp"
            android:layout_weight="1.03"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developing_book_board" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/book_list_frame_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/asa_orange"
                android:drawableTop="@drawable/ic_action_list"
                android:gravity="center"
                android:text="@string/list_frames"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/book_start_delivery_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/asa_orange"
                android:drawableTop="@drawable/ic_action_start"
                android:gravity="center"
                android:text="@string/start_delivery"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/book_add_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/asa_orange"
                android:drawableTop="@drawable/ic_action_add_frame"
                android:gravity="center"
                android:text="@string/add_frame"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
